<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:padding="@dimen/dp_20">

    <TextView
        android:id="@+id/Tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask"
        android:textColor="@color/them_cjy" />

    <TextView
        android:id="@+id/Tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv1"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/question"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv2"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/answer"
        android:textColor="@color/them_cjy" />

    <TextView
        android:id="@+id/Tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv3"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/equivalent_i"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Tv5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv4"
        android:layout_marginStart="@dimen/dp_20"
        android:text="@string/interest" />

    <TextView
        android:id="@+id/Tv6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv5"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/equivalent_m"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Tv7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Tv6"
        android:layout_marginStart="@dimen/dp_20"

        android:text="@string/capital" />
</RelativeLayout>