<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bottomDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/paymentMethod"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/interest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:button="@drawable/method_button_selector"
            android:gravity="center_vertical"
            android:text="@string/equivalent"
            android:textColor="@drawable/text_color_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />

        <RadioButton
            android:id="@+id/capital"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:button="@drawable/method_button_selector"
            android:gravity="center_vertical"
            android:text="@string/principal"
            android:textColor="@drawable/text_color_selector" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/them_cjy" />
    </LinearLayout>
</LinearLayout>