<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#281c3b"
    android:fitsSystemWindows="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/proofreadTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proofreadTitle"
            android:layout_marginTop="20dp"
            style="@style/proofreadDesText"/>
        <TextView
            android:id="@+id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proofreadTitle"
            android:layout_marginTop="28dp"
            android:layout_marginStart="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/proofreadDesText"
            android:text="@string/currentAccuracy"/>
        <!--准确度-->
        <TextView
            android:id="@+id/tv2"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1"
            android:layout_marginTop="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/Accuracy"/>
        <TextView
            android:id="@+id/tv3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/Accuracy"/>
        <!--磁场强度-->
        <TextView
            android:id="@+id/tv4"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            android:layout_marginTop="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/ccqd"/>
        <TextView
            android:id="@+id/tv5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="@string/Accuracy"/>
        <!--参考范围-->
        <TextView
            android:id="@+id/tv6"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv4"
            android:layout_marginTop="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/ckfw"/>
        <TextView
            android:id="@+id/tv7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="20-70uT"/>

        <TextView
            android:id="@+id/tv8"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv7"
            android:layout_marginTop="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/proofreadDesText"
            android:text="@string/rhjd"/>
        <TextView
            android:id="@+id/tv9"
            app:layout_constraintStart_toStartOf="@id/tv8"
            app:layout_constraintEnd_toEndOf="@id/tv7"
            app:layout_constraintTop_toBottomOf="@id/tv8"
            android:layout_marginTop="12dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/jdts"/>
        <ImageView
            android:id="@+id/iv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv9"
            android:layout_marginTop="56dp"
            android:layout_width="138dp"
            android:layout_height="90dp"
            tools:src="@drawable/jiaozhun"/>
        <TextView
            android:id="@+id/tv10"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/iv1"
            android:layout_marginTop="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/proofreadDesText"
            android:text="@string/zysx"/>
        <TextView
            android:id="@+id/tv11"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintEnd_toEndOf="@id/tv3"
            app:layout_constraintTop_toBottomOf="@id/tv10"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/syzn"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>