<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/monthDetailTv"
            android:layout_width="@dimen/dp_40"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/monthCapitalDetailTv"
            android:layout_width="@dimen/dp_45"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currentPrincipal" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/monthInterestDetailTv"
            android:layout_width="@dimen/dp_45"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/currentInterest" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/monthRefundDetailTv"
            android:layout_width="@dimen/dp_45"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monthlySupply" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />
</LinearLayout>