<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="122dp"
    android:layout_height="wrap_content"
    android:background="#56ADF8"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/rulerProofread"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/rulerJiaoDui"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bankProofread"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/bankCardJiaoDui" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/coinProofread"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/coinJiaoDui" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/defJiaodui"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/defJiaodui" />
    </LinearLayout>
</LinearLayout>