<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.example.module_tool.widget.DiyToolbar
        android:id="@+id/textureView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextureView
        android:layout_below="@+id/textureView_toolbar"
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.example.module_tool.widget.RectControlView
        android:layout_below="@+id/textureView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView

        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_et"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_5"
        android:gravity="center"
        android:text="@string/distance"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        android:visibility="gone" />

    <TextView
        android:id="@+id/distanceTake"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/background_take_picture"
        android:gravity="center"
        android:text="@string/photograph"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_below="@+id/textureView_toolbar"
        android:id="@+id/rl_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_10">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/inputHeight"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usageMethodT"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/usageMethodMC"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

</RelativeLayout>