<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.example.module_tool.widget.BankProofreadView
        android:id="@+id/bankProofread"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="85dp"/>
    <TextView
        android:id="@+id/chooseTitle"
        app:layout_constraintTop_toBottomOf="@id/bankProofread"
        app:layout_constraintLeft_toLeftOf="@id/bankProofread"
        app:layout_constraintRight_toRightOf="@id/bankProofread"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseTitle"
        android:textColor="#FF000000"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/chooseTips"
        app:layout_constraintTop_toBottomOf="@id/chooseTitle"
        app:layout_constraintLeft_toLeftOf="@id/chooseTitle"
        app:layout_constraintRight_toRightOf="@id/chooseTitle"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#FF919191"
        android:text="@string/chooseTips"/>
    <ImageView
        android:id="@+id/bankCardWidth"
        app:layout_constraintLeft_toLeftOf="@id/chooseTips"
        app:layout_constraintRight_toRightOf="@id/chooseTips"
        app:layout_constraintTop_toBottomOf="@id/chooseTips"
        android:layout_marginTop="20dp"
        android:layout_width="151dp"
        android:layout_height="16dp"
        android:paddingBottom="8dp"
        android:src="@drawable/selector_bank_card_proofread"/>
    <ImageView
        android:id="@+id/bankCardHeight"
        app:layout_constraintStart_toEndOf="@id/bankCardWidth"
        app:layout_constraintTop_toTopOf="@id/bankCardWidth"
        android:layout_width="16dp"
        android:layout_height="76dp"
        android:paddingEnd="8dp"
        android:src="@drawable/selector_bank_card_proofread"/>
    <TextView
        android:id="@+id/userTips"
        app:layout_constraintLeft_toLeftOf="@id/bankCardWidth"
        app:layout_constraintRight_toRightOf="@id/bankCardHeight"
        app:layout_constraintTop_toBottomOf="@id/bankCardHeight"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:textColor="#FF000000"
        android:text="@string/bankUserTips"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineVerticalCentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <Button
        android:id="@+id/cancel"
        app:layout_constraintTop_toBottomOf="@id/userTips"
        app:layout_constraintEnd_toEndOf="@id/lineVerticalCentre"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="66dp"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:text="@string/cancelJiaoDui"
        android:textColor="@color/white"
        android:background="@drawable/shape_jiaodui_cancel"/>
    <Button
        android:id="@+id/ok"
        app:layout_constraintTop_toBottomOf="@id/userTips"
        app:layout_constraintLeft_toLeftOf="@id/lineVerticalCentre"
        android:layout_marginTop="20dp"
        android:layout_marginStart="66dp"
        android:layout_width="124dp"
        android:layout_height="40dp"
        android:text="@string/okJiaoDui"
        android:textColor="@color/white"
        android:background="@drawable/shape_jiaodui_ok"/>
</androidx.constraintlayout.widget.ConstraintLayout>