<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">




    <TextureView
        android:layout_below="@+id/CycleRulerView_toolbar"
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <com.example.module_tool.widget.CycleRulerView
        android:layout_below="@id/CycleRulerView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/take" />

    <TextView
        android:id="@+id/take"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/background_take_picture"
        android:gravity="center"
        android:text="@string/photograph"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_below="@+id/CycleRulerView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usageMethodT"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/usageMethodPC"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <com.example.module_tool.widget.DiyToolbar
        android:id="@+id/CycleRulerView_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>